# pure-autogrid

./: default.nix  pure-autogrid.cabal
src/Pure/: Autogrid.hs
src/Pure/Autogrid/: Layout.hs  Tile.hs
