name:                pure-autogrid
version:             0.8.0.0
homepage:            purehs.org/doc/pure-autogrid
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-autogrid.git

library
  exposed-modules:
      Pure.Autogrid
    , Pure.Autogrid.Layout  
    , Pure.Autogrid.Tile  

  build-depends:
    base,
    pure-elm,
    pure-random-pcg,
    pure-maybe,
    pure-intersection,
    pure-stream,
    vector

  hs-source-dirs:      src
  default-language:    Haskell2010
